// Copyright (c) 2020 Uber Technologies, Inc.
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.

syntax = "proto3";

package uber.cadence.api.v1;

option go_package = "github.com/uber/cadence/.gen/proto/api/v1";
option java_multiple_files = true;
option java_outer_classname = "ApiProto";
option java_package = "com.uber.cadence.api.v1";

import "google/protobuf/duration.proto";
import "uber/cadence/api/v1/common.proto";
import "uber/cadence/api/v1/tasklist.proto";
import "uber/cadence/api/v1/workflow.proto";

message Decision {
  oneof attributes {
    ScheduleActivityTaskDecisionAttributes schedule_activity_task_decision_attributes = 1;
    StartTimerDecisionAttributes start_timer_decision_attributes = 2;
    CompleteWorkflowExecutionDecisionAttributes complete_workflow_execution_decision_attributes = 3;
    FailWorkflowExecutionDecisionAttributes fail_workflow_execution_decision_attributes = 4;
    RequestCancelActivityTaskDecisionAttributes request_cancel_activity_task_decision_attributes = 5;
    CancelTimerDecisionAttributes cancel_timer_decision_attributes = 6;
    CancelWorkflowExecutionDecisionAttributes cancel_workflow_execution_decision_attributes = 7;
    RequestCancelExternalWorkflowExecutionDecisionAttributes request_cancel_external_workflow_execution_decision_attributes = 8;
    RecordMarkerDecisionAttributes record_marker_decision_attributes = 9;
    ContinueAsNewWorkflowExecutionDecisionAttributes continue_as_new_workflow_execution_decision_attributes = 10;
    StartChildWorkflowExecutionDecisionAttributes start_child_workflow_execution_decision_attributes = 11;
    SignalExternalWorkflowExecutionDecisionAttributes signal_external_workflow_execution_decision_attributes = 12;
    UpsertWorkflowSearchAttributesDecisionAttributes upsert_workflow_search_attributes_decision_attributes = 13;
  }
}

message ScheduleActivityTaskDecisionAttributes {
  string activity_id = 1;
  ActivityType activity_type = 2;
  string domain = 3;
  TaskList task_list = 4;
  Payload input = 5;
  google.protobuf.Duration schedule_to_close_timeout = 6;
  google.protobuf.Duration schedule_to_start_timeout = 7;
  google.protobuf.Duration start_to_close_timeout = 8;
  google.protobuf.Duration heartbeat_timeout = 9;
  RetryPolicy retry_policy = 11;
  Header header = 12;
  bool request_local_dispatch = 13;
}

message StartTimerDecisionAttributes {
  string timer_id = 1;
  google.protobuf.Duration start_to_fire_timeout = 2;
}

message CompleteWorkflowExecutionDecisionAttributes {
  Payload result = 1;
}

message FailWorkflowExecutionDecisionAttributes {
  Failure failure = 1;
}

message RequestCancelActivityTaskDecisionAttributes {
  string activity_id = 1;
}

message CancelTimerDecisionAttributes {
  string timer_id = 1;
}

message CancelWorkflowExecutionDecisionAttributes {
  Payload details = 1;
}

message RequestCancelExternalWorkflowExecutionDecisionAttributes {
  string domain = 1;
  WorkflowExecution workflow_execution = 2;
  bytes control = 3;
  bool child_workflow_only = 4;
}

message RecordMarkerDecisionAttributes {
  string marker_name = 1;
  Payload details = 2;
  Header header = 3;
}

message ContinueAsNewWorkflowExecutionDecisionAttributes {
  WorkflowType workflow_type = 1;
  TaskList task_list = 2;
  Payload input = 3;
  google.protobuf.Duration execution_start_to_close_timeout = 4;
  google.protobuf.Duration task_start_to_close_timeout = 5;
  google.protobuf.Duration backoff_start_interval = 6;
  RetryPolicy retry_policy = 7;
  ContinueAsNewInitiator initiator = 8;
  Failure failure = 9;
  Payload last_completion_result = 10;
  string cron_schedule = 11;
  Header header = 12;
  Memo memo = 13;
  SearchAttributes search_attributes = 14;
}

message StartChildWorkflowExecutionDecisionAttributes {
  string domain = 1;
  string workflow_id = 2;
  WorkflowType workflow_type = 3;
  TaskList task_list = 4;
  Payload input = 5;
  google.protobuf.Duration execution_start_to_close_timeout = 6;
  google.protobuf.Duration task_start_to_close_timeout = 7;
  ParentClosePolicy parent_close_policy = 8;
  bytes control = 9;
  WorkflowIdReusePolicy workflow_id_reuse_policy = 10;
  RetryPolicy retry_policy = 11;
  string cron_schedule = 12;
  Header header = 13;
  Memo memo = 14;
  SearchAttributes search_attributes = 15;
}

message SignalExternalWorkflowExecutionDecisionAttributes {
  string domain = 1;
  WorkflowExecution workflow_execution = 2;
  string signal_name = 3;
  Payload input = 4;
  bytes control = 5;
  bool child_workflow_only = 6;
}

message UpsertWorkflowSearchAttributesDecisionAttributes {
  SearchAttributes search_attributes = 1;
}
